Full Section A syllabus in markdown format

--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -1,8 +1,12 @@
+<div class="csl-bib-body"
+style="line-height: 1.35; padding-left: 2em; text-indent:-2em;">
+
 Adkins, Denice, and Jenny E. Bossaller. “Fiction Access Points across
 Computer-Mediated Book Information Sources: A Comparison of Online
 Bookstores, Reader Advisory Databases, and Public Library Catalogs.”
 *Library & Information Science Research* 29, no. 3 (September 2007):
-354–68. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+354–68. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 American Library Assocation. “Knowledge and Competencies Statements
 Developed by Relevant Professional Organizations.” Text. *Education &
@@ -15,14 +19,14 @@ http://www.ala.org/educationcareers/sites/ala.org.educationcareers/files/content
 
 Anderson, James Doig, and José Pérez-Carballo. “Library of Congress
 Subject Headings (LCSH).” *Encyclopedia of Library and Information
-Sciences*. CRC Press, December 9, 2009. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+Sciences*. CRC Press, December 9, 2009. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Asher, Andrew D, Lynda M Duke, and Suzanne Wilson. “Paths of Discovery:
 Comparing the Search Effectiveness of EBSCO Discovery Service, Summon,
 Google Scholar, and Conventional Library Resources.” *College & Research
-Libraries* 74, no. 5 (2013): 464–88. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Libraries* 74, no. 5 (2013): 464–88. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 ASIST Board. “ASIST Educational Guidelines,” November 8, 2001.
 http://www.asis.org/Board/educational\_guidelines.html.
@@ -33,69 +37,70 @@ http://chronicle.com/article/Does-This-Have-to-Go/237476/.
 
 Barton, Joshua, and Lucas Mak. “Old Hopes, New Possibilities:
 Next-Generation Catalogues and the Centralization of Access.” *Library
-Trends* 61, no. 1 (2012): 83–106. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Trends* 61, no. 1 (2012): 83–106. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Bates, Jo, and Jennifer Rowley. “Social Reproduction and Exclusion in
 Subject Indexing: A Comparison of Public Library OPACs and LibraryThing
 Folksonomy.” *Journal of Documentation* 67, no. 3 (2011): 431–48.
-[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+\[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Bates, Marcia J. “Information Behavior.” *Encyclopedia of Library and
-Information Sciences*. CRC Press, December 9, 2009. [Locate full text
+Information Sciences*. CRC Press, December 9, 2009. \[Locate full text
 from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 ———. “The Invisible Substrate of Information Science.” *Journal of the
 American Society for Information Science* 50, no. 12 (January 1, 1999):
-1043–50. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+1043–50. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 ———. “What Is Browsing—really? A Model Drawing from Behavioural Science
-Research.” *Information Research* 12, no. 4 (October 2007). [Locate full
-text from http://sfx.carli.illinois.edu/sfxuiu/az].
+Research.” *Information Research* 12, no. 4 (October 2007). \[Locate
+full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Bates, J.; Rowley, J. “Social Reproduction and Exclusion in Subject
 Indexing: A Comparison of Public Library OPACs and LibraryThing
 Folksonomy.” *Journal of Documentation* 67, no. 3 (2011): 431–48.
-[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+\[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Bawden, David. “Encountering on the Road to Serendip? Browsing in New
 Information Environments.” In *Innovations in Information Retrieval:
 Perspectives for Theory and Practice*. London: Facet Publishing, 2011.
-[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/].
+\[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Bawden, David, and Lyn Robinson. “The Dark Side of Information:
 Overload, Anxiety and Other Paradoxes and Pathologies.” *J. Inf. Sci.*
-35, no. 2 (April 2009): 180–91. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+35, no. 2 (April 2009): 180–91. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Beghtol, Clare. “Classification Theory.” *Encyclopedia of Library and
-Information Sciences*. CRC Press, December 9, 2009. [Locate full text
+Information Sciences*. CRC Press, December 9, 2009. \[Locate full text
 from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Behnert, Christiane, and Dirk Lewandowski. “Ranking Search Results in
 Library Information Systems — Considering Ranking Approaches Adapted
 From Web Search Engines.” *The Journal of Academic Librarianship* 41,
-no. 6 (November 2015): 725–35. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+no. 6 (November 2015): 725–35. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Berger, Arthur Asa. “On the Structure of Genres.” In *Popular Culture
 Genres: Theories and Texts*, 3–12. Thousand Oaks,  CA: Sage, 1992.
 https://reserves.library.illinois.edu/.
 
 Bettels, Jürgen, and F. Avery Bishop. “Unicode: A Universal Character
-Code.” *Digital Tech. J.* 5, no. 3 (June 1993): 21–31. [Locate full text
-from http://sfx.carli.illinois.edu/sfxuiu/az].
+Code.” *Digital Tech. J.* 5, no. 3 (June 1993): 21–31. \[Locate full
+text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Blair, Ann. “Reading Strategies for Coping With Information Overload
 ca.1550-1700.” *Journal of the History of Ideas* 64, no. 1 (2003):
-11–28. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+11–28. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Breeding, Marshall. “Serendipity: The Virtual-Library Experience.”
-*Computers in Libraries* 35, no. 9 (November 1, 2015): 9–11. [Locate
-full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+*Computers in Libraries* 35, no. 9 (November 1, 2015): 9–11. \[Locate
+full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Brown-Sica, Margaret, and Jeffrey Beall. “Library 2.0 and the Problem of
 Hate Speech.” *Electronic Journal of Academic and Special Librarianship*
@@ -103,26 +108,26 @@ Hate Speech.” *Electronic Journal of Academic and Special Librarianship*
 http://southernlibrarianship.icaap.org/content/v09n02/brown-sica\_m01.html.
 
 Buckland, Michael K. “Obsolescence in Subject Description.” *Journal of
-Documentation* 68, no. 2 (2012): 154–61. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Documentation* 68, no. 2 (2012): 154–61. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 ———. “What Is a ‘document’?” *Journal of the American Society for
-Information Science* 48, no. 9 (September 1, 1997): 804–9. [Locate full
-text from http://sfx.carli.illinois.edu/sfxuiu/az].
+Information Science* 48, no. 9 (September 1, 1997): 804–9. \[Locate full
+text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Bush, Vannevar. “As We May Think.” *The Atlantic Monthly*, 1945.
 http://www.theatlantic.com/unbound/flashbks/computer/bushf.htm.
 
 Chan, Lois Mai, and Theodora L. Hodges. “Library of Congress
 Classification (LCC).” *Encyclopedia of Library and Information
-Sciences*. CRC Press, December 9, 2009. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+Sciences*. CRC Press, December 9, 2009. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Connaway, Lynn, Timothy Dickey, and Marie Radford. “‘If It Is Too
 Inconvenient I’m Not Going after It:’ Convenience as a Critical Factor
 in Information-Seeking Behaviors.” *Library & Information Science
-Research* 33, no. 3 (2011): 179–90. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Research* 33, no. 3 (2011): 179–90. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Connaway, Lynn Silipigni, and Ixchel M. Faniel. *Reordering Ranganathan:
 Shifting User Behaviors, Shifting Priorities*. Dublin, OH: OCLC
@@ -131,18 +136,18 @@ http://www.oclc.org/content/dam/research/publications/library/2014/oclcresearch-
 
 Connaway, Lynn Silipigni, and Ronald R. Powell. *Basic Research Methods
 for Librarians*. Vol. 5th ed. Library and Information Science Text
-Series. Santa Barbara, Calif: ABC-CLIO, 2010. [Locate full text from
-http://vufind.carli.illinois.edu/vf-uiu/].
+Series. Santa Barbara, Calif: ABC-CLIO, 2010. \[Locate full text from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 ———. “Selecting the Research Method.” In *Basic Research Methods for
 Librarians*, 71–106. Library and Information Science Text Series. Santa
-Barbara, Calif: Libraries Unlimited, 2010. [Locate full text from
-http://vufind.carli.illinois.edu/vf-uiu/].
+Barbara, Calif: Libraries Unlimited, 2010. \[Locate full text from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Coombs, James H., Allen H. Renear, and Steven J. DeRose. “Markup Systems
 and the Future of Scholarly Text Processing.” *Communications of the
-ACM* 30, no. 11 (November 1987): 933–47. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+ACM* 30, no. 11 (November 1987): 933–47. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 DeRose, Steven J. “What Do We Still Lack? Or: Prolegomena to Any Future
 Hypertext System.” In *Proceedings of the Symposium on HTML5 and XML*,
@@ -152,8 +157,8 @@ http://dx.doi.org/10.4242/BalisageVol14.DeRose01.
 
 Duffy, Eamon P. “Searching HathiTrust: Old Concepts in a New Context.”
 *Partnership: The Canadian Journal of Library and Information Practice
-and Research* 8, no. 1 (June 8, 2013). [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+and Research* 8, no. 1 (June 8, 2013). \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Dyson, Freeman. “How We Know.” *The New York Review of Books*, March 10,
 2011. http://www.nybooks.com/articles/archives/2011/mar/10/how-we-know/.
@@ -162,53 +167,53 @@ Ferraris, Maurizio. “Social Ontology and Documentality.” In *Approaches
 to Legal Ontologies: Theories, Domains, Methodologies*, edited by
 Giovanni Sartor, Pompeu Casanovas, Mariangela Biasiotti, and Meritxell
 Fernández-Barrera, 1:83–97. Law, Governance and Technology Series.
-Dordrecht: Springer Netherlands, 2011. [Locate full text from
-http://vufind.carli.illinois.edu/vf-uiu/].
+Dordrecht: Springer Netherlands, 2011. \[Locate full text from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Fidel, Raya. “Are We There yet?: Mixed Methods Research in Library and
 Information Science.” *Library & Information Science Research* 30, no. 4
-(December 2008): 265–72. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(December 2008): 265–72. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 ———. “User-Centered Indexing.” *Journal of the American Society for
-Information Science* 45, no. 8 (1994): 572–76. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Information Science* 45, no. 8 (1994): 572–76. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Fidel, R. “User-Centered Indexing...” *Journal of the American Society
-for Information Science* 45, no. 8 (1994): 572–76. [Locate full text
-from http://sfx.carli.illinois.edu/sfxuiu/az].
+for Information Science* 45, no. 8 (1994): 572–76. \[Locate full text
+from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Fister, Barbara. “The Dewey Dilemma.” *Library Journal* 134, no. 16
-(2009): 22–25. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(2009): 22–25. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Foss, Elizabeth, Allison Druin, Robin Brewer, Phillip Lo, Luis Sanchez,
 Evan Golub, and Hilary Hutchinson. “Children’s Search Roles at Home:
 Implications for Designers, Researchers, Educators, and Parents.”
 *Journal of the American Society for Information Science and Technology*
-63, no. 3 (March 1, 2012): 558–73. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+63, no. 3 (March 1, 2012): 558–73. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Fuhr, Norbert, Giannis Tsakonas, Trond Aalberg, Maristella Agosti,
 Preben Hansen, Sarantos Kapidakis, Claus-Peter Klas, et al. “Evaluation
 of Digital Libraries.” *International Journal on Digital Libraries* 8,
-no. 1 (2007): 21–38. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+no. 1 (2007): 21–38. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Furner, Jonathan. “Folksonomies.” *Encyclopedia of Library and
-Information Sciences*. CRC Press, December 9, 2009. [Locate full text
+Information Sciences*. CRC Press, December 9, 2009. \[Locate full text
 from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Gerolimos, Michalis. “Tagging for Libraries: A Review of the
 Effectiveness of Tagging Systems for Library Catalogs.” *Journal of
-Library Metadata* 13, no. 1 (2013): 36–58. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Library Metadata* 13, no. 1 (2013): 36–58. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 ———. “Tagging for Libraries: A Review of the Effectiveness of Tagging
 Systems for Library Catalogs...” *Journal of Library Metadata* 13, no. 1
-(2013): 36–58. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(2013): 36–58. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Glushko, Robert J. “Activities in Organizing Systems.” In *The
 Discipline of Organizing*, 3rd ed., 97–168. O’Reilly, 2015.
@@ -254,21 +259,22 @@ http://disciplineoforganizing.org/.
 
 Gorman, Michael. “Authority Control in the Context of Bibliographic
 Control in the Electronic Environment.” *Cataloging & Classification
-Quarterly* 38, no. 3–4 (2004): 11–22. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Quarterly* 38, no. 3–4 (2004): 11–22. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Gossen, Tatiana, and Andreas Nürnberger. “Specifics of Information
 Retrieval for Young Users: A Survey.” *Information Processing &
-Management* 49, no. 4 (July 2013): 739–56. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Management* 49, no. 4 (July 2013): 739–56. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Gross, Melissa. “The Imposed Query: Implications for Library Service
 Evaluation.” *Reference & User Services Quarterly* 37, no. 3 (1998):
-290–99. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+290–99. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Hadro, J. “What’s the Problem with Self-Publishing?” *Library Journa*
-138, no. 7 (2013): 34–36. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+138, no. 7 (2013): 34–36. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Hearst, Marti A. “The Evaluation of Search User Interfaces.” In *Search
 User Interfaces*. Cambridge: Cambridge University Press, 2009.
@@ -276,29 +282,30 @@ http://searchuserinterfaces.com/book/sui\_ch2\_evaluation.html.
 
 Higgins, Colin. “Library of Congress Classification: Teddy Roosevelt’s
 World in Numbers?” *Cataloging & Classification Quarterly* 50, no. 4
-(2012): 249–62. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(2012): 249–62. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Hunter, N. C., Legg, and J.B. Oehlerts. “Two Librarians, an Archivist,
 and 13,000 Images: Collaborating to Build a Digital Collection.”
-*Library Quarterly* 80, no. 1 (1981): 81–103. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+*Library Quarterly* 80, no. 1 (1981): 81–103. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Hyder, Eileen Mary. “Reading Groups and Social Justice.” In *Reading
 Groups, Libraries and Social Inclusion: Experiences of Blind and
 Partially Sighted People*, 49–63. Farnham, Surrey, England : Burlington,
-VT: Ashgate Publishing, Ltd., 2014. [Locate full text from
-http://vufind.carli.illinois.edu/vf-uiu/].
+VT: Ashgate Publishing, Ltd., 2014. \[Locate full text from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Jaeger, Paul T., Mega M Subramaniam, Cassandra B. Jones, and John Carlo
 Bertot. “Diversity and LIS Education: Inclusion and the Age of
 Information.” *Journal of Education for Library and Information Science*
-52, no. 3 (July 1, 2011): 166–83. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+52, no. 3 (July 1, 2011): 166–83. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Johnson, J. David. “Health-Related Information Seeking: Is It Worth It?”
 *Information Processing & Management* 50, no. 5 (September 2014):
-708–17. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+708–17. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Junus, Ranti. “Digital Collections and Accessibility.” MSU Libraries
 Blogs. *Digital Scholarship Collaborative Sandbox*, November 11–14,
@@ -306,8 +313,13 @@ Blogs. *Digital Scholarship Collaborative Sandbox*, November 11–14,
 https://blogpublic.lib.msu.edu/dsc-sandbox/2014/nov/digital-collections-and-accessibility/.
 
 Kennedy, M.R. “Nine Questions to Guide You in Choosing a Metadata
-Schema.” *Journal of Digital Information* 9, no. 1 (2008). [Locate full
-text from http://sfx.carli.illinois.edu/sfxuiu/az].
+Schema.” *Journal of Digital Information* 9, no. 1 (2008). \[Locate full
+text from http://sfx.carli.illinois.edu/sfxuiu/az\].
+
+Knox, Emily. *Book Banning in 21st-Century America*. 1 online resource.
+vols. Beta Phi Mu Scholars; Beta Phi Mu Scholars. Lanham: Rowman &
+Littlefield, 2015. EBSCOhost
+http://search.ebscohost.com/login.aspx?direct=true&scope=site&db=nlebk&db=nlabk&AN=941104.
 
 Kreyche, Michael. “Subject Headings in Spanish: The Lcsh-Es. Org
 Bilingual Database.” *Cataloging & Classification Quarterly* 51, no. 4
@@ -317,35 +329,36 @@ La Barre, Kathryn A., and Carol L. Tilley. “The Elusive Tale: Leveraging
 the Study of Information Seeking and Knowledge Organization to Improve
 Access to and Discovery of Folktales.” *Journal of the American Society
 for Information Science and Technology* 63, no. 4 (April 1, 2012):
-687–701. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+687–701. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Lavoie, Brian, Lorcan Dempsey, and Lynn Silipigni Connaway. “Making Data
 Work Harder.” *Library Journal* 131, no. 1 (January 2006): 40–42.
-[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+\[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Lee, Deborah. “Indigenous Knowledge Organization: A Study of Concepts,
 Terminology, Structure and (Mostly) Indigenous Voices.” *Partnership:
 The Canadian Journal of Library and Information Practice and Research*
-6, no. 1 (July 3, 2011). [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+6, no. 1 (July 3, 2011). \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Lee, Hur-Li. “What Is a Collection?” *Journal of the American Society
-for Information Science* 51, no. 12 (2000): 1106–13. [Locate full text
-from http://sfx.carli.illinois.edu/sfxuiu/az].
+for Information Science* 51, no. 12 (2000): 1106–13. \[Locate full text
+from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Levie, Françoise, and Sofidoc Productions. *The Man Who Wanted to
-Classify the World*, 2004. [Locate full video from
-http://vufind.carli.illinois.edu/vf-uiu/].
+Classify the World*, 2004. \[Locate full video from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Lewis, D. W. “From Stacks to the Web: The Transformation of Academic
 Library Collecting.” *College & Research Libraries* 14, no. 2 (2013):
-159–76. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+159–76. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Liu, Yan Quan, and Sarah Briggs. “A Library in the Palm of Your Hand:
 Mobile Services in Top 100 University Libraries.” *Information
-Technology and Libraries* 34, no. 2 (June 2015): 133–48. [Locate full
-text from http://sfx.carli.illinois.edu/sfxuiu/az].
+Technology and Libraries* 34, no. 2 (June 2015): 133–48. \[Locate full
+text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Maloney, Alan, and Lettie Y. Conrad. “Expecting the Unexpected:
 Serendipity, Discovery, and the Scholarly Research Process.” SAGE White
@@ -353,73 +366,78 @@ Paper. SAGE Publishing, 2016.
 http://us.sagepub.com/sites/default/files/serrdiscovery.pdf.
 
 Marcia J. Bates. “Information.” *Encyclopedia of Library and Information
-Sciences*. CRC Press, December 9, 2009. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+Sciences*. CRC Press, December 9, 2009. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 ———. “Information Behavior.” *Encyclopedia of Library and Information
-Sciences, Third Edition*. CRC Press, December 7, 2009. [Locate full text
-from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+Sciences, Third Edition*. CRC Press, December 7, 2009. \[Locate full
+text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Maxwell, R.L. “Bibliographic Control.” *Encyclopedia of Library and
-Information Sciences*, 2010. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+Information Sciences*, 2010. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
+
+McDowell, Kathleen. “Toward a History of Children as Readers,
+1890–1930.” *Book History* 12, no. 1 (2009): 240–65. \[Locate full text
+from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Miksa, Francis. “Information Organization and the Mysterious Information
 User.” *Libraries & the Cultural Record* 44, no. 3 (2009): 343–70.
-[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+\[Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Mitchell, Joan S., and Diane Vizine-Goetz. “Dewey Decimal Classification
 (DDC).” *Encyclopedia of Library and Information Sciences*. CRC Press,
-December 9, 2009. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+December 9, 2009. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Naumer, Charles M., and Karen E. Fisher. “Information Needs.”
 *Encyclopedia of Library and Information Sciences*. CRC Press, December
-9, 2009. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+9, 2009. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Nitecki, Danuta A. “Changing the Concept and Measure of Service Quality
 in Academic Libraries.” *The Journal of Academic Librarianship* 22, no.
-3 (January 1, 1996): 181–90. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+3 (January 1, 1996): 181–90. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Nodelman, Perry. “We Are All Censors.” *Canadian Children’s Literature /
 Littérature Canadienne Pour La Jeunesse* 0, no. 0 (28–12, 2007): 121.
 http://ccl.freeculture.ca/index.php/ccl-lcj/article/view/2799.
 
 Olson, Hope A. “The Power to Name: Representation in Library Catalogs.”
-*Signs* 26, no. 3 (2001): 639–68. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+*Signs* 26, no. 3 (2001): 639–68. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Rhee, Hea Lim. “Reflections on Archival User Studies.” *Reference & User
-Services Quarterly* 54, no. 4 (2015): 29–42. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Services Quarterly* 54, no. 4 (2015): 29–42. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Saarinen, Katariina, and Pertti Vakkari. “A Sign of a Good Book:
 Readers’ Methods of Accessing Fiction in the Public Library.” *Journal
-of Documentation* 69, no. 5 (September 2, 2013): 736–54. [Locate full
-text from http://sfx.carli.illinois.edu/sfxuiu/az].
+of Documentation* 69, no. 5 (September 2, 2013): 736–54. \[Locate full
+text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Sandstrom, Alan R., and Pamela Effrein Sandstrom. “The Use and Misuse of
 Anthropological Methods in Library and Information Science Research.”
 *The Library Quarterly: Information, Community, Policy* 65, no. 2
-(1995): 161–99. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(1995): 161–99. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Shachaf, Pnina, and Sarah Horowitz. “Are Virtual Reference Services
 Color Blind?” *Library & Information Science Research* 28, no. 4 (2006):
-501–20. [Locate full text from http://sfx.carli.illinois.edu/sfxuiu/az].
+501–20. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Shilton, Katie, and Ramesh Srinivasan. “Participatory Appraisal and
 Arrangement for Multicultural Archival Collections.” *Archivaria* 63
-(2007): 87. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(2007): 87. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Sutton, Brett. “Qualitative Research Methods in Library and Information
-Science [ELIS Classic].” *Encyclopedia of Library and Information
-Sciences*. CRC Press, December 9, 2009. [Locate full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+Science \[ELIS Classic\].” *Encyclopedia of Library and Information
+Sciences*. CRC Press, December 9, 2009. \[Locate full text from
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Sweeney, Miriam E. “How to Read for Grad School,” June 20, 2012.
 http://miriamsweeney.net/2012/06/20/readforgradschool/.
@@ -436,21 +454,21 @@ https://reserves.library.illinois.edu/.
 
 ———. “Development of the Organization of Recorded Information in Western
 Civilization.” In *The Organization of Information*, 3rd ed., 67–87.
-Westport, Conn: Libraries Unlimited, 2009. [Locate full text from
-http://vufind.carli.illinois.edu/vf-uiu/].
+Westport, Conn: Libraries Unlimited, 2009. \[Locate full text from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 ———. “Organization of Recorded Information.” In *The Organization of
 Information*, 3rd ed., 1–38. Westport, Conn: Libraries Unlimited, 2009.
-[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/].
+\[Locate full text from http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Teper, Jennifer Hain. “Selection for Preservation.” *Library Resources &
-Technical Services* 58, no. 4 (October 2014): 220–32. [Locate full text
-from http://sfx.carli.illinois.edu/sfxuiu/az].
+Technical Services* 58, no. 4 (October 2014): 220–32. \[Locate full text
+from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Tillett, Dr Barbara. “What Is FRBR? A Conceptual Model for the
 Bibliographic Universe.” *The Australian Library Journal* 54, no. 1
-(February 1, 2005): 24–30. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+(February 1, 2005): 24–30. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Underwood, Ted. “The Real Problem with Distant Reading.” *The Stone and
 the Shell*, May 29, 2016.
@@ -462,45 +480,46 @@ http://www.loc.gov/today/pr/2013/files/twitter\_report\_2013jan.pdf.
 
 Vogt, Lars. “eScience and the Need for Data Standards in the Life
 Sciences: In Pursuit of Objectivity rather than Truth.” *Systematics and
-Biodiversity* 11, no. 3 (September 1, 2013): 257–70. [Locate full text
-from http://sfx.carli.illinois.edu/sfxuiu/az].
+Biodiversity* 11, no. 3 (September 1, 2013): 257–70. \[Locate full text
+from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Voorhees, EllenM. “The Philosophy of Information Retrieval Evaluation.”
 In *Evaluation of Cross-Language Information Retrieval Systems*, edited
 by Carol Peters, Martin Braschler, Julio Gonzalo, and Michael Kluck,
 2406:355–70. Lecture Notes in Computer Science. Springer Berlin
-Heidelberg, 2002. [Locate full text from
-http://vufind.carli.illinois.edu/vf-uiu/].
+Heidelberg, 2002. \[Locate full text from
+http://vufind.carli.illinois.edu/vf-uiu/\].
 
 Walliman, Nicholas. “Defining the Research Problem.” In *Social Research
 Methods*, 67–74. London: SAGE Publications, Ltd, 2006.
 http://methods.sagepub.com/book/social-research-methods.
 
 Warren, John. “Zen and the Art of Metadata Maintenance.” *Journal of
-Electronic Publishing* 18, no. 3 (2015). [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+Electronic Publishing* 18, no. 3 (2015). \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 “Weave: Journal of Library User Experience.” Accessed August 22, 2016.
 http://weaveux.org/.
 
 Weinberg, Bella Hass. “Indexing: History and Theory.” *Encyclopedia of
-Library and Information Sciences*. CRC Press, December 9, 2009. [Locate
+Library and Information Sciences*. CRC Press, December 9, 2009. \[Locate
 full text from
-http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html].
+http://www.library.illinois.edu/lsx/findit/tools/encyclopedias.html\].
 
 Whitmire, Ethelene. “Racial Differences in the Academic Library
 Experiences of Undergraduates.” *The Journal of Academic Librarianship*
-25, no. 1 (January 1, 1999): 33–37. [Locate full text from
-http://sfx.carli.illinois.edu/sfxuiu/az].
+25, no. 1 (January 1, 1999): 33–37. \[Locate full text from
+http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Wilson, Tom. “The Information User: Past, Present and Future.” *Journal
-of Information Science* 34, no. 4 (August 1, 2008): 457–64. [Locate full
-text from http://sfx.carli.illinois.edu/sfxuiu/az].
+of Information Science* 34, no. 4 (August 1, 2008): 457–64. \[Locate
+full text from http://sfx.carli.illinois.edu/sfxuiu/az\].
 
 Wright, Alex. *Cataloging the World: Paul Otlet and the Birth of the
-Information Age*. Oxford: Oxford University Press, 2014. [Locate full
-video from http://vufind.carli.illinois.edu/vf-uiu/].
+Information Age*. Oxford: Oxford University Press, 2014. \[Locate full
+video from http://vufind.carli.illinois.edu/vf-uiu/\].
 
 ———. “The Secret History of Hypertext — The Atlantic,” May 22, 2014.
 http://www.theatlantic.com/technology/archive/2014/05/in-search-of-the-proto-memex/371385/.
 
+</div>
