--- a/template/template.bib
+++ b/template/template.bib
@@ -9,12 +9,14 @@
 @Misc{CTE15:CourseDesign,
   author = 	 {{University of Illinois Center for Innovation in Teaching and Learning}},
   title = 	 {Course and Syllabus Design},
-  howpublished = {Published on the World Wide Web at {http://cte.illinois.edu/resources/topics/course_plan.html}},
+  howpublished = {Published on the World Wide Web at },
+  URL = {http://cte.illinois.edu/resources/topics/course_plan.html},
   year = 	 2015}
 
 @Misc{GradCollege15,
   author = 	 {{University of Illinois Graduate College}},
   title = 	 {Recommendations for syllabi},
-  howpublished = {Published on the World Wide Web at {http://www.grad.illinois.edu/courses-syllabi}},
+  howpublished = {Published on the World Wide Web at },
+  URL = {http://www.grad.illinois.edu/courses-syllabi},
   year = 	 2015}
 
