Updates following Monday 1st discussion

--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -1,19 +1,17 @@
 <div class="csl-bib-body"
 style="line-height: 1.35; padding-left: 2em; text-indent:-2em;">
 
-American Library Assocation. “Knowledge and Competencies Statements
-Developed by Relevant Professional Organizations.” Text. *Education &
-Careers*, August 3–3, 2006.
-http://www.ala.org/educationcareers/careers/corecomp/corecompspecial/knowledgecompetencies.
-
 American Library Association. “ALA’s Core Competences of Librarianship,”
-2009.
-http://www.ala.org/educationcareers/sites/ala.org.educationcareers/files/content/careers/corecomp/corecompetences/finalcorecompstat09.pdf.
+2009. http://tinyurl.com/ALAcore.
+
+———. “Knowledge and Competencies Statements Developed by Relevant
+Professional Organizations.” Text. *Education & Careers*, August 3–3,
+2006. http://tinyurl.com/ALAcomptencies.
 
 ASIST Board. “ASIST Educational Guidelines,” November 8, 2001.
-http://www.asis.org/Board/educational\_guidelines.html.
+https://www.asis.org/Board/educational\_guidelines.html.
 
 Sweeney, Miriam E. “How to Read for Grad School,” June 20, 2012.
-http://miriamsweeney.net/2012/06/20/readforgradschool/.
+https://miriamsweeney.net/2012/06/20/readforgradschool/.
 
 </div>
